# chinese_learn_bot

./: .gitignore  README.md  main.py  pyproject.toml
src/: commands.py  constants.py  uvloop.py
